# vox_legatus

./: README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.ini  config.py  database.py  main.py
app/crud/: answer.py  poll.py  question.py  user.py  vote.py  voter.py
app/enums/: __init__.py  poll_field_answer.py  poll_status.py  role.py
app/models/: __init__.py  answer.py  poll.py  poll_field.py  poll_voters.py  question.py  user.py  vote.py  voter.py
app/routers/: auth.py  poll.py  user.py  voter.py
app/schemas/: answer.py  poll.py  question.py  user.py  vote.py  voter.py
app/static/css/: dashboard-user.css  dashboard.css
app/static/js/: api.js  dashboard-poll.js  dashboard-popup.js  dashboard-user.js  dashboard.js  vote.js
app/templates/: dashboard-user.html  dashboard.html  login.html  vote.html
app/web/: pages.py
nginx/: app.conf  default.conf
vox_legatus/: Dockerfile  requirements.txt
vox_legatus/app/: auth.py  config.ini  config.py  database.py  main.py
vox_legatus/app/crud/: poll.py  user.py  vote.py  voter.py
vox_legatus/app/enums/: __init__.py  poll_status.py  question_type.py  role.py
vox_legatus/app/models/: answer.py  voter.py
vox_legatus/app/routers/: poll.py  question.py  user.py  vote.py  voter.py
vox_legatus/app/schemas/: poll.py  question.py  user.py
vox_legatus/app/static/css/: dashboard-user.css  dashboard.css  recrutation.css
vox_legatus/app/static/js/: api.js  dashboard-poll.js  (+6 more)
vox_legatus/app/templates/: dashboard.html  login.html  recrutation.html  vote.html
vox_legatus/app/web/: pages.py
(+20 files in other folders)
