[project]
name = "vox-legatus"
version = "0.1.0"
description = ""
authors = [
    {name = "Stork",email = "74800537+8bocian@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
